# clochette

./: .dockerignore  .pre-commit-config.yaml  DeployDevDocker.sh  DeployDocker.sh  LICENSE  README.md  codecov.yml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build-and-push.yml  build.yml  dependabot-auto-merge.yml  deploy-to-prod.yml  deploy.yml  docker-test.yml  frontend-checks.yml  pre-commit.yaml  pull-request-labels.yaml  python-tests.yml  release-on-push.yml
backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 03f129368c87_.py  4f4b5e91840c_.py
backend/app/: command.py  dependencies.py  initial_data.py  main.py
backend/app/api/utils/: endpoints.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  account.py  auth.py  barrel.py  consumable.py  consumable_item.py  drink.py  glass.py  out_of_stock.py  out_of_stock_item.py  transaction.py  treasury.py
backend/app/api/v2/: api.py
backend/app/api/v2/endpoints/: barrel.py  consumable.py  glass.py  non_inventoried.py  non_inventoried_item.py  transaction.py
backend/app/commands/: dump_db.py  execute_sql.py  init_db.py  load_db.py  migrate_db.py  open_api.py  reset_db.py
backend/app/core/: auth.py  config.py  decorator.py  decorators.py  middleware.py  security.py  translation.py  types.py
backend/app/core/utils/: alert_backend.py  misc.py
backend/app/core/utils/backend/: alert_backend.py
backend/app/crud/: base.py  crud_account.py  crud_barrel.py  crud_consumable.py  crud_consumable_item.py  crud_drink.py  crud_drink_item.py  crud_glass.py  crud_non_inventoried.py  crud_non_inventoried_item.py  crud_out_of_stock.py  crud_out_of_stock_item.py  crud_stock.py  crud_transaction.py  crud_transaction_v1.py  crud_treasury.py
backend/app/db/: base.py  base_class.py  pre_start.py  select_db.py  session.py
backend/app/db/databases/: database_interface.py  postgres.py  sqlite.py
backend/app/models/: __init__.py  account.py  barrel.py  consumable.py  consumable_item.py  drink.py  drink_item.py  glass.py  non_inventoried.py  non_inventoried_item.py  out_of_stock.py  out_of_stock_item.py  stock.py  transaction.py  transaction_v1.py  treasury.py
backend/app/models/listeners/: __init__.py  transaction_listener.py
backend/app/plugins/: postgresql_enum.py
backend/app/schemas/: account.py  barrel.py  base.py  consumable.py  consumable_item.py  drink.py  drink_item.py  glass.py  item.py  items.py  out_of_stock.py  out_of_stock_item.py  stock.py  token.py  transaction.py  treasury.py  utils_endpoints.py
backend/app/schemas/v2/: barrel.py  consumable.py  glass.py  non_inventoried.py  non_inventoried_item.py  transaction.py
backend/app/utils/: custom_openapi.py  get_version.py  load_submodules.py  logger.py
backend/docs/: architecture.md  details.md
backend/test/: base_test.py  conftest.py
backend/test/app/: test_command.py  test_dependencies.py  test_main.py
backend/test/app/api/utils/: test_endpoints.py
backend/test/app/api/v1/: test_api.py
backend/test/app/api/v1/endpoints/: __init__.py  test_account.py  test_auth.py  test_barrel.py  test_consumable.py  test_consumable_item.py  test_drink.py  test_glass.py  test_out_of_stock.py  test_out_of_stock_item.py  test_transaction.py  test_treasury.py
backend/test/app/api/v2/: test_api.py
backend/test/app/api/v2/endpoints/: test_barrel.py  test_consumable.py  test_glass.py  test_non_inventoried.py  test_non_inventoried_items.py  test_transaction.py
backend/test/app/core/: test_auth.py  test_config.py  test_decorators.py  test_middleware.py  test_security.py  test_translation.py
backend/test/app/core/utils/: test_misc.py
backend/test/app/core/utils/backend/: test_alert_backend.py
backend/test/app/crud/: test_barrel.py  test_base.py  test_consumable.py  test_glass.py  test_non_inventoried.py  test_transaction.py  test_transaction_v1.py  test_treasury.py
backend/test/app/db/: test_pre_start.py  test_select_db.py
backend/test/app/db/databases/: test_database_interface.py  test_postgres.py  test_sqlite.py
backend/test/app/schemas/: test_account.py  test_barrel.py  test_consumable.py  test_glass.py  test_item.py  test_out_of_stock.py  test_out_of_stock_item.py  test_transaction.py
backend/test/app/schemas/v2/: test_transaction.py
backend/test/app/utils/: test_custom_openapi.py  test_get_version.py  test_load_submodules.py  test_logger.py
docker/: .env.sample  .gitignore  Readme.md  deployment.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/backend/: Dockerfile
docker/clochette-dev/: docker-compose.yml
docker/clochette-dev/reverse-proxy/: Dockerfile  clochette.dev.conf
docker/clochette-prod/: docker-compose.yml
docker/clochette-prod/frontend/: Dockerfile
docker/clochette-prod/reverse-proxy/: Dockerfile  clochette.minet.net.conf
docker/frontend/: CAKeyToRegister.pem  Dockerfile  README.md  clochette.dev.conf  nginx.conf  security.conf
docker/frontend/nginxconfig.io-clochette.dev/: dhparam.pem  nginx.conf
docker/frontend/ssl/: README.md
docker/reverse-proxy/: Dockerfile  clochette.dev.conf  general.conf  security.conf  template.conf
docker/reverse-proxy/ssl/: README.md  absinthe.ca.crt  absinthe.ca.key  absinthe.ca.pem  cert.conf  clochette.dev.crt  clochette.dev.key  csr.conf  dhparam.pem
frontend/: .editorconfig  .env.sample  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .tool-versions  Readme.md  astro.config.mjs  components.json  jest.config.ts  next.config.js  openapi-codegen.config.ts  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/patches/: axios-hooks+3.1.5.patch
frontend/scripts/: pregenerate.sh
frontend/src/: middleware.ts
frontend/src/assets/: darkMode.js
frontend/src/components/: 404.tsx  BuyPage.tsx  Card.tsx  Context.tsx  Counter.scss  Counter.tsx  DarkMode.tsx  Form.tsx  (+21 more)
frontend/tests/: setupTests.ts  utils.tsx
(+323 files in other folders)
